@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD xfce4-volstatus-icon-9999.ebuild 612 RMD160 ef7f8f9789124747e17dbc75627a5cae76b50c3b SHA1 63462e74869c690ccfc492aab0ee60c38140b9cf SHA256 a5865c7ad7793231363b7ebabda3de5cce97c6f7cf55b32c7d265f613c4d4de3
-MISC ChangeLog 398 RMD160 5c5d130352a02ac07c8873ea910a21b44ed9f98d SHA1 f51833e8f8d4177923b0fdc98cc74d8f38899b9b SHA256 9f78fe15f8eb0b51f7f812ff59bb5ddbe36ce030add101ef81cacfcff286a083
+EBUILD xfce4-volstatus-icon-9999.ebuild 608 RMD160 8271ad5c3ed077f649a01586650a51cf6af81dcd SHA1 794eb2c7de091fc832365c7ab4ab00e7e2eab1e1 SHA256 c47283922ff515550a71837529fb29a6ee298a9c4654e5b7e642055095bf958a
+MISC ChangeLog 550 RMD160 2688359537891100c24b1e2b11d6785c293a61c9 SHA1 5fce4b9f89b3ec277e8da58e47ff56a8b7f1dda4 SHA256 a7c9fa4780bb9728ba389e1fd4ada0d6fe813b200448745fa0a3c7e155f0cf90
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFMACgkQKhnDs22gwa/FRwCgi4qlTm09/Hk5OKMqY0dGaJM8
-9T4AoKkV96w6a0QvdfWLC9Oq0/ObYrVS
-=9Ajh
+iEYEARECAAYFAklAFpcACgkQKhnDs22gwa9G7gCgluIUruGjEmEqY4IzOTsV/My8
+nUkAoNrMAlyJC2gnmbXd/if+9WsCdOuG
+=aCxz
 -----END PGP SIGNATURE-----
