@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-volstatus-icon
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  10 Dec 2008; Christoph Mende <angelos@gentoo.org>
+  xfce4-volstatus-icon-9999.ebuild:
+  Fixed exo/ghal dependencies and set xfce dependencies to 4.4
 
   24 Jul 2007; Christoph Mende <angelos@gentoo.org>
   xfce4-volstatus-icon-9999.ebuild:
